feature: 보안 및 쿠키 설정